--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon ./dist/index.js",
-    "devinspect": "nodemon --inspect ./dist/index.js"
+    "dev": "nodemon --inspect ./dist/index.js",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^5.1.0"
