--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon --inspect ./dist/index.js",
+    "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -15,10 +16,15 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.8.2",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2"
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
