14 - some fixes in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,5 +111,5 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*"],
-  "exclude": ["tests/**/*", "node_modules/**/*"]
+  "exclude": ["__tests__/**/*", "node_modules/**/*"]
 }
