--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
