--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "mongodb": "^6.16.0"
