--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.14.0",
     "@types/supertest": "^6.0.3",
